* Fix height of text inputs at Import condition form on small screen

--- a/src/view/Components/Import/RulesDialog/ConditionForm/style.scss
+++ b/src/view/Components/Import/RulesDialog/ConditionForm/style.scss
@@ -53,13 +53,6 @@
   flex-shrink: 0;
 }
 
-.value-field {
-  display: flex;
-  flex-flow: column nowrap;
-  overflow: hidden;
-  flex: 1 1 auto;
-}
-
 /* Controls container */
 .cond-form__controls {
   display: flex;
